<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/primaryColor"
    android:padding="10dp">
    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark"-->

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePicCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/headerProfilePic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_person_2"
            tools:ignore="VectorDrawableCompat" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHeaderUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/profilePicCard"/>

    <TextView
        android:id="@+id/tvHeaderEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderUsername"
        app:layout_constraintLeft_toRightOf="@id/profilePicCard"
        app:layout_constraintBottom_toBottomOf="@id/profilePicCard"/>

</androidx.constraintlayout.widget.ConstraintLayout>
