<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Login"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:background="@color/primaryColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/ic_wave"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:background="@color/primaryColor"
            android:contentDescription="person"
            app:srcCompat="@drawable/ic_person"
            tools:ignore="VectorDrawableCompat"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:hint="@string/reg_no"
            android:text="@string/login"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/et_round_border"
        android:drawableStart="@drawable/ic_reg"
        android:drawableLeft="@drawable/ic_reg"
        android:ems="10"
        android:hint="Email ...@students.dkut.ac.ke"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/textHintColor"
        android:textColorHint="@color/textHintColor"
        android:textColorLink="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvError" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" >

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/et_round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_reg"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/primaryColor"
        android:textColorHint="@color/textHintColor"
        android:textColorLink="@color/purple_700"/>

    <ImageButton
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etPassword"
        android:layout_alignBottom="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:src="@drawable/ic_eye"
        android:layout_centerVertical="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="5dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="Forgot Password?"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/textHintColor"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="607dp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Register"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>


</LinearLayout>